@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - Bug Fixes
             - fix using comma separated backend list in CLI tool
+            - fix undefined key_sort in CLI config parser
 
 1.86-3   Thu Jan 29 19:57:35 CET 2015
           - add option for default service filter
